# gallia-scripts

./: README.md  flake.nix  pyproject.toml  setup.cfg
gallia_scripts/: dnsmasq.py
galliaplug/: dnsmasq.py
