[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gallia-scripts"
version = "0.1.0"
description = "My personal gallia scripts"
authors = ["Stefan Tatschner <stefan@rumpelsepp.org>"]
license = "MIT"
packages = [
    { include = "gallia_scripts" },
]

[tool.poetry.scripts]
dnsmasq-wrapper = 'gallia_scripts.dnsmasq:main'

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
gallia = "^1.1.0b11"

[tool.poetry.dev-dependencies]
black = "^22.10"
flake8 = "^5.0"
isort = "^5.10"
mypy = "^0.982"
pylint = "^2.15.0"
pylsp-mypy = "^0.6"
pylsp-rope = "^0.1"
python-lsp-black = "^1.1"
python-lsp-server = "^1.5"

[tool.mypy]
strict = true

[tool.black]
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = [
    "broad-except",
    "fixme",
    "invalid-name",
    "line-too-long",
    "missing-class-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "multiple-statements",
    "no-else-break",
    "no-else-continue",
    "no-else-return",
    "no-name-in-module",
    "simplifiable-if-expression",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements",
    "unused-argument",
    "unused-argument",
    "use-dict-literal",
    "use-list-literal",
]
